--- a/languages/ap-it_IT.po
+++ b/languages/ap-it_IT.po
@@ -9,10 +9,10 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-07-09 13:17+0200\n"
+"PO-Revision-Date: 2015-07-19 17:11+0530\n"
 "Last-Translator: Benjamin Meghnagi <rhodel@live.it>\n"
 "Language-Team: \n"
-"X-Generator: Poedit 1.8.2\n"
+"X-Generator: Poedit 1.7.3\n"
 "X-Poedit-KeywordsList: __;_e;_x:1,2c;_ex:1,2c;_n:1,2;_nx:1,2,4c;_n_noop:1,2;"
 "_nx_noop:1,2,3c;esc_attr__;esc_html__;esc_attr_e;esc_html_e;esc_attr_x:1,2c;"
 "esc_html_x:1,2c\n"
@@ -28,10 +28,13 @@ msgid ""
 "Please update all AnsPress extensions before activating. <a target=\"_blank"
 "\" href=\"http://anspress.io/questions/ask/\">Ask for help</a>"
 msgstr ""
+"Si prega di aggiornare tutte le estensioni AnsPress prima dell&#39;"
+"attivazione. <a target=\"_blank\" href=\"http://anspress.io/questions/ask/"
+"\">Chiedi aiuto</a>"
 
 #: activate.php:38
 msgid "Please update all AnsPress extensions before activating."
-msgstr ""
+msgstr "Si prega di aggiornare tutte le estensioni AnsPress prima di attivare."
 
 #: admin/anspress-admin.php:169 includes/post_types.php:51
 msgid "All Questions"
